modified:   src/data/ensight_class.f90 	modified:   src/grid/partmesh_class.f90 	modified:   src/particles/lpt_class.f90 	modified:   tools/GNUMake/comps/gnu.mak

--- a/examples/boat/GNUmakefile
+++ b/examples/boat/GNUmakefile
@@ -23,9 +23,10 @@ INCLUDE_LOCATIONS += $(Ulocs)
 VPATH_LOCATIONS   += $(Ulocs)
 
 # Define external libraries - this can also be in .profile
-HYPRE_DIR = /Users/desjardi/Builds/hypre
-IRL_DIR   = /Users/desjardi/Builds/IRL
-LAPACK_DIR= /Users/desjardi/Builds/lapack
+HYPRE_DIR = /Users/maxzog/builds/hypre/src/hypre/
+FFTW_DIR  = /usr/local/Cellar/fftw/3.3.10_1/
+LAPACK_DIR= /usr/local/lapack/3.3.10_1/
+IRL_DIR   = /usr/local/
 
 # NGA compilation definitions
 include $(NGA_HOME)/tools/GNUMake/Make.defs
