--- a/examples/hit/GNUmakefile
+++ b/examples/hit/GNUmakefile
@@ -2,15 +2,16 @@
 NGA_HOME ?= ../..
 
 # Compilation parameters
-PRECISION = DOUBLE
-USE_MPI   = TRUE
-USE_FFTW  = TRUE
-USE_HYPRE = TRUE
-USE_LAPACK= TRUE
-PROFILE   = FALSE
-DEBUG     = FALSE
-COMP      = gnu
-EXEBASE   = nga
+PRECISION   = DOUBLE
+USE_MPI     = TRUE
+USE_FFTW    = TRUE
+USE_P3DFFT  = TRUE
+USE_HYPRE   = TRUE
+USE_LAPACK  = TRUE
+PROFILE     = FALSE
+DEBUG       = FALSE
+COMP        = gnu
+EXEBASE     = nga
 
 # Directories that contain user-defined code
 Udirs   := src
@@ -23,9 +24,10 @@ INCLUDE_LOCATIONS += $(Ulocs)
 VPATH_LOCATIONS   += $(Ulocs)
 
 # Define external libraries - this can also be in .profile
-LAPACK_DIR= /usr/lapack
-HYPRE_DIR = /opt/libs/hypre/
-FFTW_DIR  = /usr/
+LAPACK_DIR = /usr/lapack
+HYPRE_DIR  = /opt/libs/hypre
+FFTW_DIR   = /opt/libs/fftw3
+P3DFFT_DIR = /opt/libs/p3dfft
 
 # NGA compilation definitions
 include $(NGA_HOME)/tools/GNUMake/Make.defs
