--- a/examples/vd_pjet/GNUmakefile
+++ b/examples/vd_pjet/GNUmakefile
@@ -1,10 +1,9 @@
 # NGA location if not yet defined
-#NGA_HOME ?= /Users/maxzog/NGA2/
+NGA_HOME ?= ../..
 
 # Compilation parameters
 PRECISION = DOUBLE
 USE_MPI   = TRUE
-USE_FFTW  = FALSE
 USE_HYPRE = TRUE
 USE_LAPACK= TRUE
 PROFILE   = FALSE
@@ -22,16 +21,13 @@ include $(Upack)
 INCLUDE_LOCATIONS += $(Ulocs)
 VPATH_LOCATIONS   += $(Ulocs)
 
-# Define external libraries - this can also be in .profile
-#LAPACK_DIR=/usr/local/Cellar/lapack/3.11
-#HYPRE_DIR =/Users/maxzog/builds/hypre/src/hypre
-#FFTW_DIR  =/usr/local/Cellar/fftw/3.3.10_1
+# External libraries are defined in .profile/.bashrc/.zshrc, but could be defined here as well
 
 # NGA compilation definitions
 include $(NGA_HOME)/tools/GNUMake/Make.defs
 
 # Include NGA base code
-Bdirs   := particles core subgrid constant_density data solver config grid libraries
+Bdirs   := core variable_density data solver config grid libraries
 Bpack   += $(foreach dir, $(Bdirs), $(NGA_HOME)/src/$(dir)/Make.package)
 include $(Bpack)
 
