--- a/examples/pipe2pjet/GNUmakefile
+++ b/examples/pipe2pjet/GNUmakefile
@@ -31,7 +31,7 @@ VPATH_LOCATIONS   += $(Ulocs)
 include $(NGA_HOME)/tools/GNUMake/Make.defs
 
 # Include NGA base code
-Bdirs   := particles core subgrid constant_density data transform solver config grid libraries
+Bdirs   := particles subgrid constant_density data transform solver config grid libraries
 Bpack   += $(foreach dir, $(Bdirs), $(NGA_HOME)/src/$(dir)/Make.package)
 include $(Bpack)
 
