Uneven processor splitting added. Still not done.

--- a/examples/ib_pipe/GNUmakefile
+++ b/examples/ib_pipe/GNUmakefile
@@ -30,7 +30,7 @@ VPATH_LOCATIONS   += $(Ulocs)
 include $(NGA_HOME)/tools/GNUMake/Make.defs
 
 # Include NGA base code
-Bdirs   := subgrid constant_density core data solver config grid libraries
+Bdirs   := subgrid constant_density core data transform solver config grid libraries
 Bpack   += $(foreach dir, $(Bdirs), $(NGA_HOME)/src/$(dir)/Make.package)
 include $(Bpack)
 
