--- a/examples/les_channel/GNUmakefile
+++ b/examples/les_channel/GNUmakefile
@@ -8,7 +8,7 @@ USE_FFTW  = TRUE
 USE_HYPRE = TRUE
 USE_LAPACK= TRUE
 PROFILE   = FALSE
-DEBUG     = TRUE 
+DEBUG     = FALSE
 COMP      = gnu
 EXEBASE   = nga
 
