--- a/examples/2dSDE_tester/GNUmakefile
+++ b/examples/2dSDE_tester/GNUmakefile
@@ -1,4 +1,5 @@
 # NGA location if not yet defined
+# NGA_HOME ?= ../.. 
 
 # Compilation parameters
 PRECISION = DOUBLE
@@ -7,9 +8,10 @@ USE_FFTW  = TRUE
 USE_HYPRE = TRUE
 USE_LAPACK= TRUE
 PROFILE   = FALSE
-DEBUG     = FALSE
+DEBUG     = FALSE 
 COMP      = gnu
 EXEBASE   = nga
+FSANITIZER= FALSE
 
 # Directories that contain user-defined code
 Udirs   := src
@@ -22,12 +24,15 @@ INCLUDE_LOCATIONS += $(Ulocs)
 VPATH_LOCATIONS   += $(Ulocs)
 
 # Define external libraries - this can also be in .profile
+# LAPACK_DIR= /usr/lapack/#/usr/local/Cellar/lapack/3.11
+# HYPRE_DIR = /opt/libs/hypre/#/Users/maxzog/builds/hypre/src/hypre
+# FFTW_DIR  = /opt/libs/fftw3/#/usr/local/Cellar/fftw/3.3.10_1
 
 # NGA compilation definitions
 include $(NGA_HOME)/tools/GNUMake/Make.defs
 
 # Include NGA base code
-Bdirs   := particles core subgrid transform constant_density data solver config grid libraries
+Bdirs   := particles core subgrid constant_density data transform solver config grid libraries
 Bpack   += $(foreach dir, $(Bdirs), $(NGA_HOME)/src/$(dir)/Make.package)
 include $(Bpack)
 
