--- a/examples/hit/GNUmakefile
+++ b/examples/hit/GNUmakefile
@@ -1,5 +1,5 @@
 # NGA location if not yet defined
-NGA_HOME ?= /Users/maxzog/NGA2/
+# NGA_HOME ?= /Users/maxzog/NGA2/
 
 # Compilation parameters
 PRECISION = DOUBLE
@@ -22,16 +22,11 @@ include $(Upack)
 INCLUDE_LOCATIONS += $(Ulocs)
 VPATH_LOCATIONS   += $(Ulocs)
 
-# Define external libraries - this can also be in .profile
-LAPACK_DIR=/usr/local/Cellar/lapack/3.11
-HYPRE_DIR =/Users/maxzog/builds/hypre/src/hypre
-FFTW_DIR  =/usr/local/Cellar/fftw/3.3.10_1
-
 # NGA compilation definitions
 include $(NGA_HOME)/tools/GNUMake/Make.defs
 
 # Include NGA base code
-Bdirs   := particles core subgrid constant_density data solver config grid libraries
+Bdirs   := particles core subgrid constant_density transform data solver config grid libraries
 Bpack   += $(foreach dir, $(Bdirs), $(NGA_HOME)/src/$(dir)/Make.package)
 include $(Bpack)
 
