JKR valdiated(-ish)

--- a/examples/rebound/GNUmakefile
+++ b/examples/rebound/GNUmakefile
@@ -8,7 +8,7 @@ USE_HYPRE = FALSE
 USE_LAPACK= FALSE
 USE_IRL   = FALSE
 PROFILE   = TRUE
-DEBUG     = TRUE
+DEBUG     = FALSE
 COMP      = gnu
 EXEBASE   = nga
 
